adicionado segunda atividade

--- a/Atividade 2/index.html
+++ b/Atividade 2/index.html
@@ -4,8 +4,50 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Atividade Dia 03/09/2025</title>
+    <link rel="stylesheet" href="Css/normalize.css">
+    <link rel="stylesheet" href="Css/style.css">
 </head>
 <body>
-    
+    <div class="container">
+        <header class="container"  style="background-color: lightblue; ">
+            <h1>Local Impressoras</h1>
+            <nav>
+                <ul>
+                    <li><a href="https://gemini.google.com/app?utm_source=app_launcher&utm_medium=owned&utm_campaign=base_all" target="_blank">
+                        <button>Duvidas</button>
+                    </a></li>
+                </ul>
+                <ul>
+                    <li><a href="#cabecalho">Início</a></li>
+                    <li><a href="#produtos">Produtos</a></li>
+                    <li><a href="#perifericos">Perifericos</a></li>
+                    <li><a href="#contatos">Contatos</a></li>
+                </ul>
+            </nav>
+        </header>
+
+        <main>
+            <section id="produtos" style="background-color: lightgreen;">
+                <h2>Modelos de Impressoras</h2>
+                <img src="img/GX6010.jpeg" alt="Canon Colorida Gx6010">
+                <img src="img/L3250.jpeg" alt="Epson Colorida L3250">
+                <img src="img/M428.jpeg" alt="HP laser M428">
+            </section>
+
+            <article id="perifericos" style="background-color: lightcoral;">
+                <h2>Modelos de Produtos</h2>
+                
+            </article>
+
+            <aside id="barraLateral" style="background-color: yellow;">
+                <h3>Titulo da Barra lateral</h3>
+                <p>Aqui fica a barra lateral.</p>
+            </aside>
+        </main>
+
+        <footer id="contatos" style="background-color: grey;">
+            <p>&copy; 2025 Igor Epping. Todos os direitos reservados.</p>
+        </footer>
+    </div>
 </body>
 </html>
