--- a/Atividade 2/index.html
+++ b/Atividade 2/index.html
@@ -9,43 +9,40 @@
 </head>
 <body>
     <div class="container">
-        <header class="container"  style="background-color: lightblue; ">
+        <header id="cabecalho">
             <h1>Local Impressoras</h1>
-            <nav>
-                <ul>
-                    <li><a href="https://gemini.google.com/app?utm_source=app_launcher&utm_medium=owned&utm_campaign=base_all" target="_blank">
-                        <button>Duvidas</button>
-                    </a></li>
-                </ul>
-                <ul>
+            <nav id="botoes">
+                <ul id="menu">
                     <li><a href="#cabecalho">Início</a></li>
-                    <li><a href="#produtos">Produtos</a></li>
-                    <li><a href="#perifericos">Perifericos</a></li>
+                    <li><a href="#produtos">Impressoras</a></li>
+                    <li><a href="#perifericos">Produtos</a></li>
                     <li><a href="#contatos">Contatos</a></li>
+                    <li><a href="https://gemini.google.com/app?utm_source=app_launcher&utm_medium=owned&utm_campaign=base_all" target="_blank">Duvidas</a></li>
                 </ul>
             </nav>
         </header>
 
         <main>
-            <section id="produtos" style="background-color: lightgreen;">
+            <section id="produtos">
                 <h2>Modelos de Impressoras</h2>
                 <img src="img/GX6010.jpeg" alt="Canon Colorida Gx6010">
                 <img src="img/L3250.jpeg" alt="Epson Colorida L3250">
                 <img src="img/M428.jpeg" alt="HP laser M428">
             </section>
 
-            <article id="perifericos" style="background-color: lightcoral;">
-                <h2>Modelos de Produtos</h2>
-                
-            </article>
-
-            <aside id="barraLateral" style="background-color: yellow;">
+            <section id="perifericos">
+                <h2>Produtos para Impressoras</h2>
+                <img src="img/TintaGx.jpeg" alt="Kit Tinta para Canon Gx6010">
+                <img src="img/TintaEpson.jpeg" alt="Kit Tinta para Epson L3250">
+                <img src="img/Toner258.jpeg" alt="Toner para HP M428">
+            </section>
+        </main>
+        <aside id="barraLateral">
                 <h3>Titulo da Barra lateral</h3>
                 <p>Aqui fica a barra lateral.</p>
-            </aside>
-        </main>
+        </aside>
 
-        <footer id="contatos" style="background-color: grey;">
+        <footer id="contatos">
             <p>&copy; 2025 Igor Epping. Todos os direitos reservados.</p>
         </footer>
     </div>
